\Update Atypo project with latest changes and transparent export feature"

--- a/index.html
+++ b/index.html
@@ -171,9 +171,18 @@
             <div class="output-section">
                 <div class="output-header">
                     <h2>Generated Design</h2>
-                    <div class="export-buttons">
-                        <button id="copyBtn">Copy SVG</button>
-                        <button id="downloadBtn">Download SVG</button>
+                    <div class="export-options">
+                        <div class="export-controls">
+                            <label for="transparentBgToggle">
+                                <input type="checkbox" id="transparentBgToggle">
+                                Transparent Background
+                            </label>
+                        </div>
+                        <div class="export-buttons">
+                            <button id="copyBtn">Copy SVG</button>
+                            <button id="downloadBtn">Download SVG</button>
+                            <button id="downloadPngBtn">Download PNG</button>
+                        </div>
                     </div>
                 </div>
                 
